--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -238,10 +238,6 @@ user_data/accessible_from_itunes_sharing=false
 privacy/camera_usage_description=""
 privacy/microphone_usage_description=""
 privacy/photolibrary_usage_description=""
-orientation/portrait=true
-orientation/landscape_left=true
-orientation/landscape_right=true
-orientation/portrait_upside_down=true
 required_icons/iphone_120x120=""
 required_icons/ipad_76x76=""
 required_icons/app_store_1024x1024=""
@@ -267,3 +263,28 @@ portrait_launch_screens/iphone_1125x2436=""
 portrait_launch_screens/ipad_768x1024=""
 portrait_launch_screens/ipad_1536x2048=""
 portrait_launch_screens/iphone_1242x2208=""
+
+[preset.2]
+
+name="HTML5"
+platform="HTML5"
+runnable=true
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path=""
+script_export_mode=1
+script_encryption_key=""
+
+[preset.2.options]
+
+custom_template/debug=""
+custom_template/release=""
+variant/export_type=0
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
+html/custom_html_shell=""
+html/head_include=""
+html/canvas_resize_policy=2
+html/experimental_virtual_keyboard=false
